# moyoung-watch

./: .gitignore  LICENSE  README.md  hacs.json  pytest.ini  requirements-dev.txt
client/: README.md  pyproject.toml
client/moyoung_client/: __init__.py  cli.py  commands.py  events.py  facefmt.py  faceupload.py  firmware.py  health.py  settings.py  transport.py
client/tests/: test_commands.py  test_events.py  test_facefmt.py  test_faceupload.py  test_firmware.py  test_health.py  test_settings.py
custom_components/moyoung/: README.md  __init__.py  config_flow.py  const.py  coordinator.py  event.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/moyoung/proto/: __init__.py  commands.py  faceupload.py
dashboards/: FIXES.md  moyoung-dashboard.yaml
docs/: PROTOCOL.md  face-builder.html  index.html
tests/: test_moyoung_camera.py  test_moyoung_discovery.py  test_moyoung_faces.py
watchfaces/dawft/: README.md  get-dawft.sh
watchfaces/solar-soc/: build.py  build_hero.py  build_hero5.py  build_tou.py
watchfaces/solar-soc/glyphs/: watchface.txt
